test/negative/unary-W01.cfr
// Test for negative weakuntil constraint

a
 b ?
  c ?
  d ?
  [ W d]


// Fail to parse as expected 
